--- a/app.conf
+++ b/app.conf
@@ -11,6 +11,9 @@
 ##############################################################################
 
 handlers:
+  - url : /static/(.*)
+    script: /public/$1
+
   - url : (.*)
     script: $1.nodejs
 
