--- a/app.conf
+++ b/app.conf
@@ -29,3 +29,8 @@ handlers:
 
 environment :
   NODE_ENV : "development"
+  BAE_USER_AK : "91ffd5e7cbe44f6fb8d6bdde574fc06e"
+  BAE_USER_SK : "d977a9f49d6f4a78a7dfde99896efaea"
+  BAE_MONGODB_HOST : "mongo.duapp.com"
+  BAE_MONGODB_PORT : "8908"
+  BAE_MONGODB_NAME : "juttKHwHVOlviRkTYYUU"
