--- a/package.json
+++ b/package.json
@@ -7,29 +7,7 @@
 	},
 	"main": "app.js",
 	"dependencies": {
-		"coffee-script": "1.x",
-		"jade": "1.x",
-		"less": "2.x",
-		"express": "4.x",
-		"serve-favicon": "2.x",
-		"morgan": "^1.x",
-		"cookie-parser": "1.x",
-		"body-parser": "1.x",
-		"compression": "1.x",
-		"glob": "5.x",
-		"ehp": "1.x",
-		"connect-multiparty": "2.x",
-		"jimp": "x"
-	},
-	"devDependencies": {
-		"grunt": "x",
-		"grunt-develop": "x",
-		"grunt-contrib-jade": "x",
-		"grunt-contrib-less": "x",
-		"grunt-contrib-coffee": "x",
-		"grunt-contrib-uglify": "x",
-		"grunt-contrib-watch": "x",
-		"time-grunt": "x",
-		"load-grunt-tasks": "x"
+		"express": "x",
+		"http-proxy": "x"
 	}
 }
